--- a/html/foods.html
+++ b/html/foods.html
@@ -27,73 +27,118 @@
         </div>
     </div>
 </header>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
+        <a class="navbar-brand d-lg-none" href="#">Menü</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Kezdőoldal</a></li>
-                <li class="nav-item"><a class="nav-link" href="restaurants.html">Éttermek</a></li>
-                <li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="foods.html">Ételek</a></li>
-                <li class="nav-item"><a class="nav-link" href="coupons.html">Kedvezmények</a></li>
-                <li class="nav-item"><a class="nav-link" href="user.html">Felhasználó</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Kezdőoldal</a></li><li class="nav-item"><a class="nav-link" href="restaurants.html">Éttermek</a></li><li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="foods.html">Ételek</a></li><li class="nav-item"><a class="nav-link" href="coupons.html">Kedvezmények</a></li><li class="nav-item"><a class="nav-link" href="user.html">Felhasználó</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
-<main class="food-main">
-    <div class="accordion" id="foodAccordion">
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                    Sültkrumpli
-                </button>
-            </h2>
-            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#foodAccordion">
-                <div class="accordion-body">
-                    <img src="../imgs/sultkrumpli.jpg" alt="Sültkrumpli" class="accordion-img">
-                    <p>A sültkrumpli egy világszerte népszerű köret. Friss burgonyából készül, amelyet olajban sütnek ropogósra.</p>
-                </div>
-            </div>
-        </div>
 
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Coca-Cola
-                </button>
-            </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#foodAccordion">
-                <div class="accordion-body">
-                    <img src="../imgs/cola.jfif" alt="Cola" class="accordion-img">
-                    <p>A Coca-Cola a világ egyik legismertebb üdítőitala, amelyet 1886-ban John Stith Pemberton gyógyszerész fejlesztett ki az Egyesült Államokban. Kezdetben gyógyszerként árulták, később azonban egy világszerte népszerű szénsavas üdítővé vált.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Chicken McNuggets
-                </button>
-            </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#foodAccordion">
-                <div class="accordion-body">
-                    <img src="../imgs/csirke.jfif" alt="Csirke" class="accordion-img">
-                    <p>A Chicken McNuggets a McDonald’s egyik legnépszerűbb terméke.A McNuggets receptje gondosan válogatott csirkemellből készül, amelyet fűszeres panírral vonnak be. Az ízek még inkább kiemelkednek a különböző mártogatós szószok segítségével, mint például a BBQ, a mézes-mustáros vagy az édes-savanyú szósz.</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</main>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<div class="container my-5">
+    <h2 class="mb-4">Termékek</h2>
+    <div id="product-list" class="row gy-4"></div>
+    <nav>
+        <ul id="pagination" class="pagination justify-content-center mt-4"></ul>
+    </nav>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+
+<script>
+    const LIMIT = 6;
+    const foodKeywords = ["food", "snack", "burger", "pizza", "kitchen", "drink", "juice", "milk", "chocolate"];
+
+    function fetchProducts(page = 1) {
+        const skip = (page - 1) * LIMIT;
+        $.get(`https://dummyjson.com/products?limit=100`, function(data) {
+            const foodProducts = data.products.filter(product =>
+                foodKeywords.some(keyword =>
+                    product.title.toLowerCase().includes(keyword) ||
+                    product.description.toLowerCase().includes(keyword)
+                )
+            );
+
+            const pageProducts = foodProducts.slice(skip, skip + LIMIT);
+
+            $('#product-list').empty();
+            pageProducts.forEach(product => {
+                const stars = '★'.repeat(Math.round(product.rating)) + '☆'.repeat(5 - Math.round(product.rating));
+                const card = `
+                <div class="col-md-4">
+                    <div class="card h-100 shadow-sm">
+                        <img src="${product.thumbnail || product.images[0]}" class="card-img-top" alt="${product.title}">
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">${product.title}</h5>
+                            <p class="card-text">${product.description}</p>
+                            <p class="fw-bold">Ár: ${product.price} $</p>
+                            <p>Értékelés: <span class="text-warning">${stars}</span></p>
+                            <button class="btn btn-outline-primary mt-auto" data-bs-toggle="collapse" data-bs-target="#comments-${product.id}">
+                                Hozzászólások
+                            </button>
+                            <div id="comments-${product.id}" class="collapse mt-3">
+                                <div class="mb-2">
+                                    <input type="text" class="form-control mb-1" placeholder="Név">
+                                    <textarea class="form-control mb-2" rows="2" placeholder="Üzenet"></textarea>
+                                    <button class="btn btn-sm btn-success add-comment">Küldés</button>
+                                </div>
+                                <ul class="list-group comment-list"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>`;
+                $('#product-list').append(card);
+            });
+
+            $('.add-comment').off('click').on('click', function() {
+                const wrapper = $(this).closest('.collapse');
+                const name = wrapper.find('input').val();
+                const message = wrapper.find('textarea').val();
+                if (name && message) {
+                    const newComment = `<li class="list-group-item"><strong>${name}:</strong> ${message}</li>`;
+                    wrapper.find('.comment-list').append(newComment);
+                    wrapper.find('input, textarea').val('');
+                }
+            });
+
+            setupPagination(foodProducts.length);
+        });
+    }
+
+    function setupPagination(total = 30) {
+        const pageCount = Math.ceil(total / LIMIT);
+        $('#pagination').empty();
+        for (let i = 1; i <= pageCount; i++) {
+            $('#pagination').append(`
+                <li class="page-item"><a class="page-link" href="#">${i}</a></li>
+            `);
+        }
+
+        $('.page-link').off('click').on('click', function(e) {
+            e.preventDefault();
+            const selectedPage = parseInt($(this).text());
+            fetchProducts(selectedPage);
+        });
+    }
+
+    $(document).ready(function() {
+        fetchProducts();
+    });
+</script>
 
 </body>
 </html>
