--- a/html/restaurants.html
+++ b/html/restaurants.html
@@ -26,24 +26,24 @@
         </div>
     </div>
 </header>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
+        <a class="navbar-brand d-lg-none" href="#">Menü</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Kezdőoldal</a></li>
-                <li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="restaurants.html">Éttermek</a></li>
-                <li class="nav-item"><a class="nav-link" href="foods.html">Ételek</a></li>
-                <li class="nav-item"><a class="nav-link" href="coupons.html">Kedvezmények</a></li>
-                <li class="nav-item"><a class="nav-link" href="user.html">Felhasználó</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">Kezdőoldal</a></li><li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="restaurants.html">Éttermek</a></li><li class="nav-item"><a class="nav-link" href="foods.html">Ételek</a></li><li class="nav-item"><a class="nav-link" href="coupons.html">Kedvezmények</a></li><li class="nav-item"><a class="nav-link" href="user.html">Felhasználó</a></li>
             </ul>
         </div>
     </div>
 </nav>
+
 
 <main class="container mt-4">
     <div class="row">
