--- a/html/restaurants/etterem-mc.html
+++ b/html/restaurants/etterem-mc.html
@@ -34,6 +34,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,6 +64,7 @@
         </div>
     </div>
 </nav>
+
 <main class="etterem-main">
 
     <img src="../../imgs/mcimg.png" alt="kep">
@@ -69,7 +72,7 @@
     <p>
         A McDonald’s Corporation a világ egyik legnagyobb gyorsétteremlánca.
     </p>
-    <table class="arjegyzek">
+    <table class="table table-striped table-bordered table-hover">
         <caption> Árjegyzék </caption>
         <thead>
         <tr>
@@ -127,6 +130,9 @@
         if (nev && uzenet) {
             const li = document.createElement("li");
             li.className = "list-group-item";
+            li.style.whiteSpace = "normal";
+            li.style.overflowWrap = "break-word";
+            li.style.wordBreak = "break-word";
             li.innerHTML = `<strong>${nev}:</strong> ${uzenet}`;
             document.getElementById("kommentek").appendChild(li);
             document.getElementById("nev").value = "";
