--- a/html/restaurants/etterem-tk.html
+++ b/html/restaurants/etterem-tk.html
@@ -14,7 +14,7 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/css/lightbox.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/lightbox2@2/dist/js/lightbox.min.js"></script>
-  
+
 </head>
 <body>
 <header>
@@ -32,6 +32,9 @@
 </header>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container-fluid">
@@ -62,6 +65,7 @@
   </div>
 </nav>
 
+
 <main class="etterem-main">
 
   <img src="../../imgs/tunderkonyha.png" alt="kep">
@@ -70,7 +74,7 @@
 
     Jellegében igazodva a nagy elődhöz a Tündérkonyha is önkiszolgáló gyorsétterem, ahol mind a magyaros,
     mind a mediterrán konyha kedvelői megtalálhatják számításukat. Célunk egy olyan minőségi étterem létrehozása volt, ahol minden korosztály és városunkban kiránduló csoport gyorsan és olcsó, pénztárcabarát árakon tud finom ételeket enni.</p>
-  <table class="arjegyzek">
+  <table class="table table-striped table-bordered table-hover">
     <caption> Árjegyzék </caption>
     <thead>
     <tr>
@@ -129,6 +133,9 @@
     if (nev && uzenet) {
       const li = document.createElement("li");
       li.className = "list-group-item";
+      li.style.whiteSpace = "normal";
+      li.style.overflowWrap = "break-word";
+      li.style.wordBreak = "break-word";
       li.innerHTML = `<strong>${nev}:</strong> ${uzenet}`;
       document.getElementById("kommentek").appendChild(li);
       document.getElementById("nev").value = "";
