--- a/index.html
+++ b/index.html
@@ -27,38 +27,32 @@
         </div>
     </div>
 </header>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
+        <a class="navbar-brand d-lg-none" href="#">Menü</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
                 aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="index.html" style="background-color: #198754; color: white; padding: 0.5rem 1rem; border-radius: 0.375rem;">Kezdőoldal</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/restaurants.html">Éttermek</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/foods.html">Ételek</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/coupons.html">Kedvezmények</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="html/user.html">Felhasználó</a>
-                </li>
+                <li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="index.html">Kezdőoldal</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/restaurants.html">Éttermek</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/foods.html">Ételek</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/coupons.html">Kedvezmények</a></li>
+                <li class="nav-item"><a class="nav-link" href="html/user.html">Felhasználó</a></li>
             </ul>
         </div>
     </div>
 </nav>
 
+
 <main class="contact-main">
     <h2>Kapcsolatfelvétel</h2>
-    <form class="container p-4 border rounded shadow-lg">
+    <form id="contact-form" class="container p-4 border rounded shadow-lg">
         <div class="mb-3 text-center">
             <label for="name" class="form-label fs-5 fw-bold text-center">Név:</label>
             <input type="text" id="name" name="name" class="form-control text-center" placeholder="Név" required>
