--- a/html/user.html
+++ b/html/user.html
@@ -1,47 +1,39 @@
 
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8"/>
     <title>Felhasználó</title>
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/user.css">
-    <link rel="stylesheet" href="../css/media.css">
-    <link rel="stylesheet" href="../css/print-etterem.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="../imgs/favicon.png">
-    <script type="module" src="main.js"></script>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="../css/style.css" rel="stylesheet"/>
+    <link href="../css/user.css" rel="stylesheet"/>
+    <link href="../css/media.css" rel="stylesheet"/>
+    <link href="../css/print-etterem.css" rel="stylesheet"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <link href="../imgs/favicon.png" rel="icon" type="image/x-icon"/>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
 <header>
     <div class="head-image">
         <div class="food-icon-container">
-            <img src="../imgs/food.svg" alt="kocsi" class="food-icon">
+            <img alt="kocsi" class="food-icon" src="../imgs/food.svg"/>
         </div>
         <div class="food-icon-container">
-            <img src="../imgs/food.svg" alt="kocsi" class="food-icon">
+            <img alt="kocsi" class="food-icon" src="../imgs/food.svg"/>
         </div>
         <div class="food-icon-container">
-            <img src="../imgs/food.svg" alt="kocsi" class="food-icon">
+            <img alt="kocsi" class="food-icon" src="../imgs/food.svg"/>
         </div>
     </div>
 </header>
-
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
     <div class="container-fluid">
         <a class="navbar-brand d-lg-none" href="#">Menü</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
+        <button aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarNav" data-bs-toggle="collapse" type="button">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Kezdőoldal</a></li><li class="nav-item"><a class="nav-link" href="restaurants.html">Éttermek</a></li><li class="nav-item"><a class="nav-link" href="foods.html">Ételek</a></li><li class="nav-item"><a class="nav-link" href="coupons.html">Kedvezmények</a></li><li class="nav-item"><a class="nav-link active text-white bg-success rounded px-3" href="user.html">Felhasználó</a></li>
@@ -49,14 +41,8 @@
         </div>
     </div>
 </nav>
-
-
-
-
-<main class="user-main">
-
-
-    <div class="container my-5">
+<main class="user-main" style=" max-width: 100%; overflow-x: hidden;">
+    <div class="container my-5" style=" max-width: 100%; overflow-x: hidden;">
         <div class="row justify-content-center">
             <div class="col-md-8 col-lg-6">
                 <div class="card shadow">
@@ -64,15 +50,15 @@
                         <h2 class="card-title text-center mb-4">Kapcsolati adatok frissítése</h2>
                         <form id="contact-form">
                             <div class="mb-3">
-                                <label for="username" class="form-label">Új felhasználónév</label>
-                                <input type="text" class="form-control" id="username" name="username" maxlength="20" placeholder="azennevemez">
+                                <label class="form-label" for="username">Új felhasználónév</label>
+                                <input class="form-control" id="username" maxlength="20" name="username" placeholder="azennevemez" type="text"/>
                             </div>
                             <div class="mb-3">
-                                <label for="email" class="form-label">Új e-mail cím</label>
-                                <input type="email" class="form-control" id="email" name="email" placeholder="ujrajovolt@hello.nt">
+                                <label class="form-label" for="email">Új e-mail cím</label>
+                                <input class="form-control" id="email" name="email" placeholder="ujrajovolt@hello.nt" type="email"/>
                             </div>
                             <div class="d-grid">
-                                <button type="submit" class="btn btn-success">Beküldés</button>
+                                <button class="btn btn-success" type="submit">Beküldés</button>
                             </div>
                         </form>
                     </div>
@@ -80,89 +66,83 @@
             </div>
         </div>
     </div>
-
-    <form action="#" method="post">
+    <div class="container" style=" max-width: 100%; overflow-x: hidden;"><div class="row justify-content-center"><div class="col-md-10 col-lg-8"><form action="#" method="post">
         <fieldset>
             <legend>Új étterem felvétele</legend>
             <label for="res-name">Étterem neve</label>
-            <input type="text" name="res-name" id="res-name" placeholder="Kis Béla Konyhája">
+            <input class="form-control mb-2" id="res-name" name="res-name" placeholder="Kis Béla Konyhája" type="text"/>
             <label for="res-address">Étterem címe</label>
-            <input type="text" name="res-address" id="res-address" placeholder="Pacal utca 15">
+            <input class="form-control mb-2" id="res-address" name="res-address" placeholder="Pacal utca 15" type="text"/>
             <label for="res-website">Weboldal</label>
-            <input type="url" id="res-website" name="res-website" placeholder="https://www.ezegykamuetterem.hu">
+            <input class="form-control mb-2" id="res-website" name="res-website" placeholder="https://www.ezegykamuetterem.hu" type="url"/>
             <label for="res-picture">Étterem logója/képe</label>
-            <input type="file" name="res-picture" id="res-picture">
+            <input class="form-control mb-2" id="res-picture" name="res-picture" type="file"/>
         </fieldset>
         <fieldset>
             <legend>Új étel felvétele</legend>
             <label for="restaurant">Étterem</label>
-            <select id="restaurant" name="restaurant">
+            <select class="form-control mb-2" id="restaurant" name="restaurant">
                 <option value="1">Nagy Békavár</option>
                 <option value="2">Kis Békavár</option>
                 <option value="3">Közepes Békavár</option>
             </select>
             <label for="food-name">Étel megnevezése</label>
-            <input type="text" id="food-name" name="food-name" maxlength="50" placeholder="Finom hurka">
+            <input class="form-control mb-2" id="food-name" maxlength="50" name="food-name" placeholder="Finom hurka" type="text"/>
             <label for="food-price">Étel ára</label>
-            <input type="number" id="food-price" name="food-price" placeholder="1000000">
+            <input class="form-control mb-2" id="food-price" name="food-price" placeholder="1000000" type="number"/>
             <label for="food-desc">Étel leírása</label>
-            <textarea name="food-desc" id="food-desc" cols="30" rows="10" placeholder="Sok benne a rizs..."></textarea>
+            <textarea class="form-control mb-2" cols="30" id="food-desc" name="food-desc" placeholder="Sok benne a rizs..." rows="10"></textarea>
         </fieldset>
         <fieldset>
             <legend>Új kedvezmény</legend>
             <label for="res-coupon">Étterem</label>
-            <select id="res-coupon" name="res-coupon">
+            <select class="form-control mb-2" id="res-coupon" name="res-coupon">
                 <option value="1">Nagy Békavár</option>
                 <option value="2">Kis Békavár</option>
                 <option value="3">Közepes Békavár</option>
             </select>
             <label for="coupon-value">Kedvezmény mértéke</label>
-            <input type="number" id="coupon-value" name="coupon-value" placeholder="1000">
-            <input type="radio" id="coupon-percentage" name="coupon-percentage" value="%" checked>
+            <input class="form-control mb-2" id="coupon-value" name="coupon-value" placeholder="1000" type="number"/>
+            <input checked="" class="form-control mb-2" id="coupon-percentage" name="coupon-percentage" type="radio" value="%"/>
             <label for="coupon-percentage">%</label>
-            <input type="radio" id="coupon-ft" name="coupon-percentage" value="ft" >
+            <input class="form-control mb-2" id="coupon-ft" name="coupon-percentage" type="radio" value="ft"/>
             <label for="coupon-ft">Ft</label>
             <label for="coupon-group">Kinek szól</label>
-            <select name="coupon-goup" id="coupon-group">
+            <select class="form-control mb-2" id="coupon-group" name="coupon-goup">
                 <option value="all">Mindenkinek</option>
                 <option value="student">Diákoknak</option>
                 <option value="old">Időseknek</option>
                 <option value="else">Egyéb</option>
             </select>
         </fieldset>
-        <input type="submit" id="submit-new-items" name="submit-new-items" value="Beküldés">
-        <input type="reset" id="reset-all-items" name="reset-all-items" value="Törlés">
-    </form>
-    <section class="container my-5">
+        <input class="form-control mb-2" id="submit-new-items" name="submit-new-items" type="submit" value="Beküldés"/>
+        <input class="form-control mb-2" id="reset-all-items" name="reset-all-items" type="reset" value="Törlés"/>
+    </form></div></div></div>
+    <section class="container my-5" style=" max-width: 100%; overflow-x: hidden;">
         <h2 class="mb-4">Kapcsolatfelvétel</h2>
         <form id="ajax-contact-form">
             <div class="mb-3">
-                <label for="contact-name" class="form-label">Név</label>
-                <input type="text" class="form-control" id="contact-name" required>
+                <label class="form-label" for="contact-name">Név</label>
+                <input class="form-control" id="contact-name" required="" type="text"/>
             </div>
             <div class="mb-3">
-                <label for="contact-email" class="form-label">Email cím</label>
-                <input type="email" class="form-control" id="contact-email" required>
+                <label class="form-label" for="contact-email">Email cím</label>
+                <input class="form-control" id="contact-email" required="" type="email"/>
             </div>
             <div class="mb-3">
-                <label for="contact-message" class="form-label">Üzenet</label>
-                <textarea class="form-control" id="contact-message" rows="4" required></textarea>
+                <label class="form-label" for="contact-message">Üzenet</label>
+                <textarea class="form-control" id="contact-message" required="" rows="4"></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">
+            <button class="btn btn-primary" type="submit">
                 Küldés
-                <i id="spinner" class="fas fa-spinner fa-spin ms-2 d-none"></i>
+                <i class="fas fa-spinner fa-spin ms-2 d-none" id="spinner"></i>
             </button>
         </form>
     </section>
-
-
 </main>
-
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet"/>
 <script>
     $(document).ready(function() {
         $('#ajax-contact-form').submit(function(e) {
@@ -188,7 +168,5 @@
         });
     });
 </script>
-
-
 </body>
 </html>
